// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux action + reductor test should create an action to add a bookmark in empty list 1`] = `
Array [
  Object {
    "url": "http://NOUSEURL",
  },
]
`;

exports[`Redux action + reductor test should create an action to add a bookmark in empty list 2`] = `
Array [
  Object {
    "url": "http://my.test",
  },
  Object {
    "url": "http://NOUSEURL",
  },
]
`;
